[tool.poetry]
name = "flaskapi"
version = "0.1.0"
description = "A real world api with flask"
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
